<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>vat-invoice-soa</artifactId>
        <groupId>com.lenovo.dtc.buy.invoice</groupId>
        <version>3.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>vat-invoice-soa-service</artifactId>

    <properties>
        <!-- Docker & Kubernetes & Jenkins 插件配置 -->
        <project.docker.canDeploy>true</project.docker.canDeploy>
        <project.docker.role>d</project.docker.role>                            <!-- 建议dubbo应用设为 svc, 减少最终 pod 名字的长度 -->
        <project.docker.author>xuwh3</project.docker.author>
        <project.docker.minReplicas>2</project.docker.minReplicas>
        <project.docker.maxReplicas>10</project.docker.maxReplicas>
        <project.docker.cpu>500m</project.docker.cpu>
        <project.docker.memory>1Gi</project.docker.memory>
        <project.docker.jvmOpts>-Xmx1g -Xms1g -Xmn512m -Xss1m -XX:PermSize=512m -XX:MaxPermSize=512m</project.docker.jvmOpts>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <version>1.0.15</version>
        </dependency>

        <!-- dubbo dependency -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>dubbo</artifactId>
            <version>2.4.5</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.lenovo.dtc.buy.invoice</groupId>
            <artifactId>vat-invoice-soa-dao</artifactId>
            <version>3.1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.lenovo.dtc.buy.invoice</groupId>
            <artifactId>vat-invoice-soa-api</artifactId>
            <version>3.1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.lenovo.dtc.buy.invoice</groupId>
            <artifactId>vat-invoice-soa-common</artifactId>
            <version>3.1.0-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-log4j12</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>slf4j-log4j12</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>commons-jexl</groupId>
            <artifactId>commons-jexl</artifactId>
            <version>1.1</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.lenovo.m2.ordercenter.soa</groupId>
            <artifactId>ordercenter-domain</artifactId>
            <version>3.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.lenovo.m2.ordercenter.soa</groupId>
            <artifactId>ordercenter-api</artifactId>
            <version>3.0.0</version>
        </dependency>



        <!--kafka-->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka_2.10</artifactId>
            <version>0.8.2.2</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-log4j12</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.lenovo</groupId>
            <artifactId>kafka-api-core</artifactId>
            <version>0.1</version>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-log4j12</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.lenovo.m2.stock.soa</groupId>
            <artifactId>stock-soa-api</artifactId>
            <version>2.3-SNAPSHOT</version>
        </dependency>

    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.4.1</version>
                <configuration>
                    <finalName>${artifactId}</finalName>
                    <descriptors>
                        <descriptor>src/main/assembly/distribution.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <classesDirectory>target/classes/</classesDirectory>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>
            <!--docker-->
            <plugin>
                <groupId>com.spotify</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.4.11</version>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <dockerDirectory>${project.basedir}</dockerDirectory>
                    <pushImage>true</pushImage>
                    <imageName>
                        dockerhub.lefile.cn/${project.docker.group}/${project.docker.application}-${project.docker.role}:${project.version}
                    </imageName>
                </configuration>
            </plugin>
            <!--kubernetes-->
            <plugin>
                <groupId>com.lenovo</groupId>
                <artifactId>maven-kubernetes-plugin</artifactId>
                <version>0.0.2-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>